--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
     "next": "^13.1.6",
@@ -21,6 +22,8 @@
     "react-rough-notation": "^1.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "styled-components": "^5.3.9",
+    "styled-normalize": "^8.0.7",
     "swiper": "^9.2.0"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
