--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "lodash": "^4.17.21",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
+    "lodash": "^4.17.21",
     "next": "^13.1.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -30,6 +30,7 @@
     "@netlify/plugin-nextjs": "^4.30.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/styled-components": "^5.1.26",
