--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "portfolio",
+  "version": "0.1.0",
+  "homepage": "https://mohammadne.github.io",
   "private": true,
-  "version": "1.3.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test:once": "vitest run",
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
-    "prepare": "husky install",
-    "lint": "eslint .",
-    "format:check": "prettier --check .",
-    "format": "prettier --write ."
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "lodash": "^4.17.21",
