--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "mohammadne.github.io",
+  "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://mohammadne.github.io",
+  "homepage": "https://mohammadne.github.io/portfolio",
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
