--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "mohammadne.github.io",
   "version": "0.1.0",
-  "homepage": "https://mohammadne.github.io/portfolio",
+  "homepage": "https://mohammadne.github.io",
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
