--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "homepage": "https://mohammadne.github.io",
   "private": true,
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -15,7 +13,8 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "format:check": "prettier --check .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@types/jest": "^29.5.4",
